# FRD-CV-Demo-Pedestrian-Detection

./: CMakeLists.txt  LICENSE  PEDESTRIAN_DETECT_RUN_INSTRUCTIONS.txt  README.md  README_extended_pddemo.txt  TODO.md  config.h.in
buildsys/video/: bars.h265.avi  bars.mjpeg.avi  bars.theora.avi  bars.vp8.avi  bars.vp9.avi  bars.wmv.avi  bars.x264.avi  vidtest.cpp
packaging/: makepkg.sh  run.sh
src/: algorithm.cpp  algorithm.hpp  main.cpp  results.hpp  ui.hpp
src/algorithms/: brisk_area_match.cpp  brisk_area_match.hpp  hog_ocl_fpga.cpp  hog_ocl_fpga.hpp  ocv.cpp  ocv.hpp  pedestrian_detect.cl
src/media/: capture.cpp  capture.hpp  sink.cpp  sink.hpp
src/results/: http.cpp  http.hpp  http_util.cpp  metadump.cpp  metadump.hpp  network.cpp  network.hpp
src/ui/: overlay.cpp  overlay.hpp  result_render.cpp  status.cpp  status.hpp
tools/: build_brisk_database.py
